--- a/private/lang/en.yml
+++ b/private/lang/en.yml
@@ -27,9 +27,13 @@ fileListHidden: This folder's contents have been hidden.
 fileListError: An error occurred.
 fileListEntryUp: "Up to %0"
 fileListRootName: "Home"
+previewTitlebar2: "%0 • %1"
 previewTitle: "This file can't be previewed!"
 previewDesc: "You'll have to download it to view its contents."
 previewDownload: "Download file (%0)"
+previewFirstFile: "This is the first file."
+previewLastFile: "This is the last file."
+linkPreviewFileUncached: "This file's details aren't available right now, but you can preview and download it online."
 popupErrorTitle: "Uh oh!"
 popupNoJsDesc: "Seems like you have Javascript disabled! The core functionality of CyberFiles requires Javascript, so you'll need to enable it to continue. See the Help link below if you're having trouble."
 popupFileInfoTitle: File info
