--- a/private/lang/en.yml
+++ b/private/lang/en.yml
@@ -34,6 +34,17 @@ previewDownload: "Download file (%0)"
 previewFirstFile: "This is the first file."
 previewLastFile: "This is the last file."
 linkPreviewFileUncached: "This file's details aren't available right now, but you can preview and download it online."
+dropdownDisabled: "This option isn't available yet."
+dropdownRefreshList: "Refresh files"
+dropdownSortList: "Sort files..."
+dropdownHistory: "History..."
+dropdownRefreshPage: "Refresh page"
+dropdownAbout: "About CyberFiles..."
+dropdownShareDirectory: "Copy directory URL"
+dropdownShareFilePreview: "Copy file preview URL"
+dropdownShareFile: "Copy file URL"
+dropdownFileInfo: "File info..."
+dropdownFileDownload: "Download (%0)"
 popupErrorTitle: "Uh oh!"
 popupNoJsDesc: "Seems like you have Javascript disabled! The core functionality of CyberFiles requires Javascript, so you'll need to enable it to continue. See the Help link below if you're having trouble."
 popupNotImplementedTitle: Not implemented
