--- a/private/lang/en.yml
+++ b/private/lang/en.yml
@@ -64,6 +64,8 @@ previewDesc: "You'll have to download it to view its contents."
 previewDownload: "Download file (%0)"
 previewFirstFile: "This is the first file."
 previewLastFile: "This is the last file."
+previewNext: "Next file:"
+previewPrev: "Previous file:"
 popupAboutVersion: "Version: %0"
 popupAboutChangelog: "Local Changelog"
 popupAboutDesc2: "Built with love by CyberGen49"
@@ -84,6 +86,8 @@ popupNotImplementedDesc: The action you just tried to perform hasn't been implem
 popupVideoResumeTitle: Resume video
 popupVideoResumeDesc: You left off at %0 on this video. Do you want to resume from there?
 popupNoRandomFile: There aren't any non-directory files in this folder, so nothing can be previewed.
+popupBadShortLinkTitle: Invalid short link
+popupBadShortLinkDesc: The CyberFiles short link you tried to access isn't valid. See if the person who gave you the short link has the full one.
 popupBack: "Back"
 popupClose: "Close"
 popupHelp: "Help"
@@ -184,6 +188,8 @@ sizeUnitMB: MB
 sizeUnitTB: TB
 topbarButtonUpLimitTooltip: This is the root directory.
 topbarTitleTooltip: Go home
+breadcrumbTooltip: Move into %0
+breadcrumbTooltipCurrent: "You're already in this directory"
 fileTypeDefault: File
 fileTypeDirectory: Folder
 fileTypes:
