--- a/private/lang/en.yml
+++ b/private/lang/en.yml
@@ -5,14 +5,18 @@
 # If you want to translate CyberFiles to your language, create a pull request
 # on the Github repo and make your changes.
 
-dropdownAbout: "About CyberFiles..."
+# The language's display name
+name: English
+
+dropdownAbout: "About CyberFiles"
 dropdownDisabled: "This option isn't available right now."
 dropdownFileDownload: "Download (%0)"
 dropdownFileInfo: "File info..."
-dropdownRecents: "Recents..."
+dropdownLang: Language...
 dropdownRandomFile: "Preview a random file"
-dropdownRecentsViewFull: "View full history..."
+dropdownRecents: "Recents..."
 dropdownRecentsClearHistory: "Clear history..."
+dropdownRecentsViewFull: "View full history..."
 dropdownRefreshList: "Refresh files"
 dropdownRefreshPage: "Refresh page"
 dropdownShareDirectory: "Copy directory URL"
@@ -21,15 +25,16 @@ dropdownShareFile: "Copy file URL"
 dropdownShareFilePreview: "Copy preview URL"
 dropdownShareFilePreviewShort: "Copy short preview URL"
 dropdownSortList: "Sort files..."
-dropdownSortListName: Name A-Z
-dropdownSortListNameDesc: Name Z-A
 dropdownSortListDate: Oldest first
 dropdownSortListDateDesc: Newest first
-dropdownSortListType: Extension A-Z
-dropdownSortListTypeDesc: Extension Z-A
+dropdownSortListDefault: Use folder default
+dropdownSortListName: Name A-Z
+dropdownSortListNameDesc: Name Z-A
 dropdownSortListSize: Smallest first
 dropdownSortListSizeDesc: Largest first
-dropdownSortListDefault: Use folder default
+dropdownSortListType: Extension A-Z
+dropdownSortListTypeDesc: Extension Z-A
+dropdownTheme: Theme...
 toastCopyDirectoryLink: Copied directory URL to clipboard.
 toastCopyDirectoryLinkShort: Copied short directory URL to clipboard.
 toastCopyFilePreviewLink: Copied file preview URL to clipboard.
@@ -105,6 +110,7 @@ popupClose: "Close"
 popupHelp: "Help"
 popupHome: "Home"
 popupOkay: "Okay"
+popupContinue: "Continue"
 popupReload: "Reload"
 popupRetry: "Try again"
 popupYes: "Yep"
@@ -132,18 +138,18 @@ popupServerError523: "The proxy server failed to connect to the origin server."
 popupServerError524: "The proxy server timed out while waiting for a response from the origin server. If this is a large directory that hasn't been loaded before, it may take a couple loads to get it all cached."
 popupServerErrorOther: "The server encountered an error. Search for the error code above for more info."
 linkPreviewFileUncached: "This file's details aren't available right now, but you can preview and download it online."
-loggerTypeAccess: Access
-loggerTypeGeneric: Info
-loggerTypeError: Error
-loggerTypePhpError: PHP %0
-loggerPageLoad: "[%0] Freshly loaded CyberFiles in \"%1\""
-loggerShortLinkUsed: "[%0] Used short link \"%1\""
 loggerApiCall: "[%0] Made an API request in \"%1\" with arguments '%2'"
+loggerCacheReset: "The cache database has been wiped to match version \"%0\""
+loggerFailedShortLink: "Too many failed attempts to create a short link slug for path: \"%0\""
 loggerFileCached: "Saved file to cache: \"%0\""
 loggerNewShortLink: "Created new short link slug for path: \"%0\""
-loggerFailedShortLink: "Too many failed attempts to create a short link slug for path: \"%0\""
-loggerCacheReset: "The cache database has been wiped to match version \"%0\""
+loggerPageLoad: "[%0] Freshly loaded CyberFiles in \"%1\""
 loggerPhpError: "%0 (%1:%2)"
+loggerShortLinkUsed: "[%0] Used short link \"%1\""
+loggerTypeAccess: Access
+loggerTypeError: Error
+loggerTypeGeneric: Info
+loggerTypePhpError: PHP %0
 dtMonth1: January
 dtMonth1Short: Jan
 dtMonth2: February
@@ -294,10 +300,10 @@ fileTypes:
   LNK: Windows Shortcut
   LOG: Log File
   LUA: Lua Source File
+  M: Objective-C Implementation File
   M3U: Media Playlist File
   M4A: MPEG-4 Audio File
   M4V: iTunes Video File
-  M: Objective-C Implementation File
   MARKDOWN: Markdown Document
   MAX: 3ds Max Scene File
   MD: Markdown Document
